monthly and daily sales and purchase dashboard
